AI-JADEDEVS4/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Industry_Focus__c</fullName>
        <label>Industry Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing &amp; Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations, Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Repair, Services, Dealers, Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking, Accounting, Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages, Distillers, Wineries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance, Plumbing, HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Service &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities, Foundations, Nonprofits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware, Networking, Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Packaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Warehousing, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-commerce, Financial Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services, Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment, Sports, Movies, TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farming, Livestock, Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare, Hospitals, Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality, Gaming, Hotel, Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment, Supplies, Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet &amp; Online Services Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Services &amp; Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing, Parts, Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media, Publishing, Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Equipment, Supplies, Services</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Lead ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner_Lead__c</fullName>
        <formula>IF (ISPICKVAL(Lead_Source_Most_Recent__c, &quot;Partner - Prospect Referral Form&quot;)|| (PRL_Used__c = true), TRUE, FALSE)</formula>
        <label>Is Partner Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_eloqua_inserted_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is eloqua inserted / Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_logged_in_user__c</fullName>
        <formula>Owner_s_Manager_id__c  =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is logged in user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Features_Needed__c</fullName>
        <label>Key Features Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_MinusEloqua__c</fullName>
        <label>Last Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Eloqua_Email_Clicked_Through_Date__c</fullName>
        <description>Date of last email the name clicked on in Eloqua.</description>
        <inlineHelpText>Date of last email the name clicked on in Eloqua.</inlineHelpText>
        <label>Last Eloqua Email Clicked-Through Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Eloqua_Email_Clicked_Through_URL__c</fullName>
        <description>Last link that was clicked-through from a name in an Eloqua Email.</description>
        <inlineHelpText>Last link that was clicked-through from a name in an Eloqua Email.</inlineHelpText>
        <label>Last Eloqua Email Clicked-Through (URL)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Eloqua_Email_Clicked_Through__c</fullName>
        <description>The last email that the name clicked through in Eloqua.</description>
        <inlineHelpText>The last email that the name clicked through in Eloqua.</inlineHelpText>
        <label>Last Eloqua Email Clicked-Through</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Eloqua_Email_Sent_Date__c</fullName>
        <description>Date of the last email that was sent to a name from Eloqua</description>
        <inlineHelpText>Date of the last email that was sent to a name from Eloqua</inlineHelpText>
        <label>Last Eloqua Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Eloqua_Email_Sent__c</fullName>
        <description>Last email that was sent to the name in Eloqua.</description>
        <inlineHelpText>Last email that was sent to the name in Eloqua.</inlineHelpText>
        <label>Last Eloqua Email Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Open_Date__c</fullName>
        <description>Date and Time the last email sent from Eloqua was opened by the name.</description>
        <inlineHelpText>Date and Time the last email sent from Eloqua was opened by the name.</inlineHelpText>
        <label>Last Eloqua Email Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Opened__c</fullName>
        <description>Last email that the name opened that was sent out of Eloqua.</description>
        <inlineHelpText>Last email that the name opened that was sent out of Eloqua.</inlineHelpText>
        <label>Last Eloqua Email Opened</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_18_Digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Lead 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>The legacy created date if it exists, otherwise the native created date field</description>
        <formula>IF(!ISBLANK(ARCHIVE_First_Created_Date__c), ARCHIVE_First_Created_Date__c, CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The legacy created date if it exists, otherwise the native created date field</inlineHelpText>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Email_Domain__c</fullName>
        <formula>CASE( SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL), 
&apos;yahoo.com&apos;, NULL, &apos;gmail.com&apos;, NULL, &apos;hotmail.com&apos;, NULL, &apos;aol.com&apos;, NULL, &apos;outlook.com&apos;, NULL, 
SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL) )</formula>
        <inlineHelpText>Get Lead Email Domain for Round Robin</inlineHelpText>
        <label>Lead Email Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Offer_Most_Recent__c</fullName>
        <inlineHelpText>this value should change over time given that the person keeps getting new material</inlineHelpText>
        <label>Lead Offer - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - NetSuite Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Demo Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials NetSuite Module Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Online Module Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Webinar Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP BPK Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP CPM Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Customer Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Discovery Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Enterprise Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Hosted Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Live Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Partner Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Consolidation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Discovery Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Prospect Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Resource Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Survival Kit Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software WP - Top 10 Financial Management Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software WP - Top 15 Accounting Software Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Offer_Original__c</fullName>
        <inlineHelpText>originally lead source, now we&apos;re breaking it out to the channel, and the offer.  this is the offer.</inlineHelpText>
        <label>Lead Offer Original</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - NetSuite Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Demo Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials NetSuite Module Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Online Module Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Webinar Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP BPK Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Customer Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Discovery Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Enterprise Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Hosted Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Live Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Consolidation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Discovery Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Prospect Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Resource Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Survival Kit Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article – CFO Get IT Right Or Get Left Behind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study - DHL Global Forwarding Ireland automates budgeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study – Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Kit - 2007</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <formula>Owner_First_Name__c &amp; &quot; &quot; &amp;  Owner_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Historical_High_Date__c</fullName>
        <description>Date/Time stamp when Lead Score Historical High field changes</description>
        <inlineHelpText>Date/Time stamp when Lead Score Historical High field changes</inlineHelpText>
        <label>Lead Score Historical High Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Historical_High__c</fullName>
        <description>The historical high lead score. Highest ever achieved</description>
        <inlineHelpText>The historical high lead score. Highest ever achieved</inlineHelpText>
        <label>Lead Score Historical High</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>This field score is calculated based on Eloqua lead score ( Example : A1-88,A2-68,B2-65)</description>
        <formula>MAX(HubSpot_Lead_Score__c,CASE(Eloqua_Lead_Score__c,&quot;A1&quot;,88,&quot;B1&quot;,85,&quot;C1&quot;,73,&quot;D1&quot;,71,&quot;A2&quot;,68,&quot;B2&quot;,65,&quot;C2&quot;,53,&quot;D2&quot;,50,&quot;A3&quot;,49,&quot;B3&quot;,47,&quot;C3&quot;,34,&quot;D3&quot;,30,&quot;A4&quot;,25,&quot;B4&quot;,22,&quot;C4&quot;,15,&quot;D4&quot;,10,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field score is calculated based on Eloqua lead score ( Example : A1-88,A2-68,B2-65)</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>This field displays the most recent lead source</description>
        <label>Lead Source - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caperra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua Engagement Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Accounting Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Generated List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Industry List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Prospect Referral Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-DM|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-IN|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-LM|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-TD|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-TS|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Change_Date__c</fullName>
        <label>Lead Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>This field is used to map the lead status on the contact since we can&apos;t map the standard lead status</description>
        <globalPicklist>Global_Lead_Status</globalPicklist>
        <inlineHelpText>This is used by SDRs to track the SDR lifecycle</inlineHelpText>
        <label>SDR Conversion Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press/Analyst</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Vendor__c</fullName>
        <inlineHelpText>Mainly used to identify Purchased list and partner events</inlineHelpText>
        <label>Lead Vendor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <inlineHelpText>Marketing Accepted Lead (MAL)
Marketing Qualified Lead (MQL)
Sales Accepted Lead (SAL)</inlineHelpText>
        <label>Lifecycle</label>
        <picklist>
            <picklistValues>
                <fullName>MAL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDF_Approval_Number__c</fullName>
        <label>MDF Approval Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Sourced_Lead__c</fullName>
        <label>MDF Sourced Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Awareness__c</fullName>
        <description>How did you first become aware of this company?</description>
        <inlineHelpText>How did you first become aware of this company?</inlineHelpText>
        <label>Marketing Awareness</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Engagement__c</fullName>
        <description>How did you get them to engage with you?:</description>
        <inlineHelpText>How did you get them to engage with you?:</inlineHelpText>
        <label>Marketing Engagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Funnel__c</fullName>
        <description>How did you push them through the funnel to this point?:</description>
        <inlineHelpText>How did you push them through the funnel to this point?:</inlineHelpText>
        <label>Marketing_Funnel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Status__c</fullName>
        <label>Marketing Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_MDF_Activities__c</fullName>
        <description>Was MDF tied to any of these activities?</description>
        <inlineHelpText>Was MDF tied to any of these activities?</inlineHelpText>
        <label>Marketing MDF Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_MDF_Program__c</fullName>
        <description>What was the primary MDF program category?</description>
        <inlineHelpText>What was the primary MDF program category?</inlineHelpText>
        <label>Marketing MDF Program</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral/Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking/Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Event promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Feature__c</fullName>
        <description>Enter specific details to the missing key features of our product.</description>
        <inlineHelpText>Enter specific details to the missing key features of our product.</inlineHelpText>
        <label>Missing Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Features__c</fullName>
        <inlineHelpText>Enter specific details to the missing key features of our product.</inlineHelpText>
        <label>Missing Features</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Site_Needs__c</fullName>
        <label>Multiple Sites</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>NAICS Code (number)</description>
        <inlineHelpText>NAICS Code (number), for industry selection</inlineHelpText>
        <label>NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <description>Full NAICS description of industry. Based on NAICS Code</description>
        <inlineHelpText>Full NAICS description of industry. Based on NAICS Code</inlineHelpText>
        <label>NAICS Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Other_System__c</fullName>
        <inlineHelpText>More details on other data sources.</inlineHelpText>
        <label>Name Other System</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Partner_Id__c</fullName>
        <label>NetSuite Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Form_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Form Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Mapped to Relayware portal</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Employees_Not_Accurate__c</fullName>
        <formula>NumberOfEmployees  &lt;&gt; ( Consulting__c  +  System_Design_Implementation__c  +  Sales__c  +  Business_Development__c  +  Marketing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Employees Not Accurate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Profit_Email_Contains__c</fullName>
        <formula>CONTAINS(Email,&quot;.org&quot;) &amp;&amp; (Country = &apos;United States&apos; || Country = &apos;US&apos; )</formula>
        <label>Non Profit Email Contains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Lead Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Leads_Active__c</fullName>
        <label>Number Leads Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Active_Customers__c</fullName>
        <label>Number of Active Customers</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>